--- a/infra/k8s/auth-depl.yaml
+++ b/infra/k8s/auth-depl.yaml
@@ -16,6 +16,12 @@ spec:
       containers: 
         - name: auth #this name can be anything and we will use this for logging purposes lets say
           image: asia.gcr.io/ticketing-dev-315817/auth
+          env:
+            - name: JWT_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: jwt-secret
+                  key: JWT_KEY
 ---
 apiVersion: v1
 kind: Service
