--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -16,5 +16,13 @@ build:
         dockerfile: Dockerfile
       sync:
         manual:
-          - src: 'src/**/*.ts' #take all .ts files from src
+          - src: 'src/**/*.ts' #watch all .ts files from src directory
+            dest: . #where to sync inside running container
+    - image: asia.gcr.io/ticketing-dev-315817/client
+      context: client
+      docker: 
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: '**/*.js' #watch all .js files from client directory
             dest: . #where to sync inside running container
