--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -1,5 +1,5 @@
 apiVersion: skaffold/v2alpha3
-kind: config
+kind: Config
 deploy:
   kubectl:
     manifests:
@@ -8,9 +8,9 @@ build:
   # local:
   #   push: false
   googleCloudBuild:
-    projectId: ticketing-dev-315817
+    projectId: ticketing-316209
   artifacts:
-    - image: asia.gcr.io/ticketing-dev-315817/auth #hosts image in asia gcloud repo
+    - image: asia.gcr.io/ticketing-316209/auth #hosts image in asia gcloud repo
       context: auth
       docker: 
         dockerfile: Dockerfile
@@ -18,7 +18,7 @@ build:
         manual:
           - src: 'src/**/*.ts' #watch all .ts files from src directory
             dest: . #where to sync inside running container
-    - image: asia.gcr.io/ticketing-dev-315817/client
+    - image: asia.gcr.io/ticketing-316209/client
       context: client
       docker: 
         dockerfile: Dockerfile
