--- a/auth/package.json
+++ b/auth/package.json
@@ -19,6 +19,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@jainsanyam/common": "^1.0.2",
     "@types/cookie-session": "^2.0.42",
     "@types/express": "^4.17.12",
     "@types/jsonwebtoken": "^8.5.1",
