--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -18,6 +18,14 @@ build:
         manual:
           - src: 'src/**/*.ts' #watch all .ts files from src directory
             dest: . #where to sync inside running container
+    - image: asia.gcr.io/ticketing-316209/tickets #hosts image in gcloud repo
+      context: tickets
+      docker: 
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: 'src/**/*.ts' 
+            dest: .
     - image: asia.gcr.io/ticketing-316209/client
       context: client
       docker: 
