--- a/infra/k8s/tickets-depl.yaml
+++ b/infra/k8s/tickets-depl.yaml
@@ -24,6 +24,15 @@ spec:
                 secretKeyRef:
                   name: jwt-secret
                   key: JWT_KEY
+            - name: NATS_CLUSTER_ID
+              value: ticketing
+            - name: NATS_URL
+              value: 'http://nats-srv:4222'
+            - name: NATS_CLIENT_ID
+              valueFrom: #needs to be different for each clients so cant set a raw string
+                fieldRef:
+                  fieldPath: metadata.name 
+                  #we are extracting this pod's name here and setting the same to client id as well. This is a better practice and will help when we debug issues when having multiple copies of ticket services  
 ---
 apiVersion: v1
 kind: Service
