--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -26,6 +26,14 @@ build:
         manual:
           - src: 'src/**/*.ts' 
             dest: .
+    - image: asia.gcr.io/ticketing-316209/orders
+      context: orders
+      docker: 
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          - src: 'src/**/*.ts' 
+            dest: .
     - image: asia.gcr.io/ticketing-316209/client
       context: client
       docker: 
