--- a/orders/package.json
+++ b/orders/package.json
@@ -19,7 +19,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@jainsanyam/common": "^1.0.9",
+    "@jainsanyam/common": "^1.0.10",
     "@types/cookie-session": "^2.0.42",
     "@types/express": "^4.17.12",
     "@types/jsonwebtoken": "^8.5.1",
@@ -30,6 +30,7 @@
     "express-validator": "^6.11.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.13",
+    "mongoose-update-if-current": "^1.4.0",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.3.2"
   },
