--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -16,7 +16,8 @@ build:
         dockerfile: Dockerfile
       sync:
         manual:
-          - src: 'src/**/*.ts' #watch all .ts files from src directory
+          #- src: 'src/**/*.ts' #watch all .ts files from src directory
+          - src: '***/.ts'
             dest: . #where to sync inside running container
     - image: asia.gcr.io/ticketing-316209/tickets
       context: tickets
@@ -24,7 +25,8 @@ build:
         dockerfile: Dockerfile
       sync:
         manual:
-          - src: 'src/**/*.ts' 
+          #- src: 'src/**/*.ts' 
+          - src: '***/.ts'
             dest: .
     - image: asia.gcr.io/ticketing-316209/orders
       context: orders
@@ -32,7 +34,8 @@ build:
         dockerfile: Dockerfile
       sync:
         manual:
-          - src: 'src/**/*.ts' 
+          #- src: 'src/**/*.ts' 
+          - src: '***/.ts'
             dest: .
     - image: asia.gcr.io/ticketing-316209/client
       context: client
@@ -40,5 +43,6 @@ build:
         dockerfile: Dockerfile
       sync:
         manual:
-          - src: '**/*.js' #watch all .js files from client directory
+          #- src: '**/*.js' #watch all .js files from client directory
+          - src: '***/.js'
             dest: . #where to sync inside running container
