Expiration service: Initial setup

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -37,6 +37,15 @@ build:
           #- src: 'src/**/*.ts' 
           - src: '***/.ts'
             dest: .
+    - image: asia.gcr.io/ticketing-316209/expiration
+      context: expiration
+      docker: 
+        dockerfile: Dockerfile
+      sync:
+        manual:
+          #- src: 'src/**/*.ts' 
+          - src: '***/.ts'
+            dest: .
     - image: asia.gcr.io/ticketing-316209/client
       context: client
       docker: 
