--- a/.github/workflows/tests-auth.yml
+++ b/.github/workflows/tests-auth.yml
@@ -1,4 +1,4 @@
-name: tests
+name: auth
 
 on:
   pull_request # on open, sync, re-open a PR
@@ -8,6 +8,6 @@ jobs:
     runs-on: ubuntu-latest #specify machine
     steps:
       - uses: actions/checkout@v2 #take code out of our project
-      - run: cd auth && npm install && npm run test:ci #run tests for auth service ":ci is a gotcha"
+      - run: cd auth && npm install && npm run test:ci #run tests for auth service "add a CI script inside package.json so that it runs only once and doesnt watch for changes"
       
     
