--- a/.github/workflows/tests-orders.yml
+++ b/.github/workflows/tests-orders.yml
@@ -1,7 +1,9 @@
 name: tests-orders
 
 on:
-  pull_request # on open, sync, re-open a PR
+  pull_request: # on open, sync, re-open a PR AND files inside orders/** has changed then only run this suite
+    paths:
+      - 'orders/**'
   
 jobs:
   build:
