--- a/.github/workflows/tests-payments.yml
+++ b/.github/workflows/tests-payments.yml
@@ -1,7 +1,9 @@
 name: tests-payments
 
 on:
-  pull_request # on open, sync, re-open a PR
+  pull_request: # on open, sync, re-open a PR AND files inside payments/** has changed then only run this suite
+    paths:
+      - 'payments/**'
   
 jobs:
   build:
