--- a/.github/workflows/tests-tickets.yml
+++ b/.github/workflows/tests-tickets.yml
@@ -1,7 +1,9 @@
 name: tests-tickets
 
 on:
-  pull_request # on open, sync, re-open a PR
+  pull_request: # on open, sync, re-open a PR AND files inside tickets/** has changed then only run this suite
+    paths:
+      - 'tickets/**'
   
 jobs:
   build:
