--- a/infra/k8s-dev/ingress-srv.yaml
+++ b/infra/k8s-dev/ingress-srv.yaml
@@ -7,7 +7,7 @@ metadata:
     nginx.ingress.kubernetes.io/use-regex: "true"
 spec:
   rules:
-    - host: ticketing.dev
+    - host: ticketing.dev #specify your own domain name here
       http:
         paths:
         #paths need to be in order
